# super-trunfo-motos

./: .gitignore  README.md  pyproject.toml
core/: settings.py
motos/: admin.py  models.py
