[tool.poetry]
name = "projeto-super-trunfo-motos"
version = "0.1.0"
description = ""
authors = ["davidsilcard <davidsilcard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
